manifest/objects/LVGO__Campaign_Member__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>LVGO__Campaign__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CompanyOrAccount__c</fullName>
        <label>Company (Account)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Company_Name__c</fullName>
        <formula>LVGO__CompanyOrAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>LVGO__Contact__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Email_Opt_Out__c</fullName>
        <formula>LVGO__ContactId__r.LVGO__HasOptedOutOfEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__FirstRespondedDate__c</fullName>
        <label>First Responded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__HasOptedOutOfFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__HasResponded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>LVGO__Lead__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__MobilePhone__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__PostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__State__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended Conference</fullName>
                </value>
                <value>
                    <fullName>Invited to Ignyte</fullName>
                </value>
                <value>
                    <fullName>RSVP Yes to Ignyte</fullName>
                </value>
                <value>
                    <fullName>Attended Ignyte</fullName>
                </value>
                <value>
                    <fullName>Followed up</fullName>
                </value>
                <value>
                    <fullName>Engaged with Stephanie</fullName>
                </value>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Requested Follow Up</fullName>
                </value>
                <value>
                    <fullName>Opt out</fullName>
                </value>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Sent - Jim P</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Mail Failure</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Sent Invite</fullName>
                </value>
                <value>
                    <fullName>Analysis Request</fullName>
                </value>
                <value>
                    <fullName>Follow up call</fullName>
                </value>
                <value>
                    <fullName>F/U Call 1</fullName>
                </value>
                <value>
                    <fullName>F/U Call 2</fullName>
                </value>
                <value>
                    <fullName>F/U Call 3</fullName>
                </value>
                <value>
                    <fullName>Sent - Glen</fullName>
                </value>
                <value>
                    <fullName>Sent - Michael</fullName>
                </value>
                <value>
                    <fullName>Sent - Jason M</fullName>
                </value>
                <value>
                    <fullName>Sent - Lee</fullName>
                </value>
                <value>
                    <fullName>Sent - Steve S</fullName>
                </value>
                <value>
                    <fullName>Inquired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>LV Campaign Member</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Campaign Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>